2022-07-06  G. Branden Robinson <g.branden.robinson@gmail.com>

	[ms]: Fix Savannah #62686.

	* tmac/s.tmac (@MC): Set no-space mode before doing a paragraph
	reset, not after: we don't want vertical space at the top of the
	first column when entering multi-column mode, because then it
	doesn't align with the tops of subsequent columns.

	Fixes <https://savannah.gnu.org/bugs/?62686>.

2022-07-06  G. Branden Robinson <g.branden.robinson@gmail.com>

	[ms]: Regression-test Savannah #62686.

	* tmac/tests/s_mark-column-start-correctly.sh: Do it.
	* tmac/tmac.am (tmac_TESTS): Run test.

2022-07-06  G. Branden Robinson <g.branden.robinson@gmail.com>

	* tmac/s.tmac (IX): Drop.
	* NEWS: Add item.

2022-07-06  G. Branden Robinson <g.branden.robinson@gmail.com>

	* tmac/s.tmac: Add "sorry" implementations for documented but
	unsupported Unix Version 7 ms macros.  This way it's easier to
	tell when a historical document needs one and this case is
	distinguishable from a document-private macro warned about with
	"groff -w mac".

2022-07-06  G. Branden Robinson <g.branden.robinson@gmail.com>

	* tmac/s.tmac (UX): Drop undocumented support for this macro.
	This implementation isn't consistent with historical ones, which
	identified the trademark holder.  But doing that is a problem,
	so just stop trying to cope.  Also, spelling Unix in full caps
	was an imposition by the AT&T legal department on on the CSRC.

	"The name Unix is a trademark, originally owned by Bell Labs and
	subsequently traded off like a baseball card among a number of
	companies." -- Ben Klemens

2022-07-06  G. Branden Robinson <g.branden.robinson@gmail.com>

	[ms]: Replace incomplete documentation of unimplemented macros.

	* doc/groff.texi (Missing ms Macros):
	* doc/ms.ms (AT&T ms macros not appearing in groff ms): Drop,
	replacing with...

	* doc/groff.texi (Unix Version 7 ms Macros Not Implemented by
	groff ms):
	* doc/ms.ms (Unix Version 7 ms macros not implemented by groff
	ms):